--- a/style.css
+++ b/style.css
@@ -34,6 +34,10 @@ nav{
    height: 52.2px;
   
 }
+.hide-menu{
+    display: none;
+}
+
 .menu-div{
     width: 466px;
     height: 36px;
@@ -41,7 +45,7 @@ nav{
 }
 .menu{
     font-size: 16px;
-    margin-left: 34px;
+    margin-left: 20px;
     color: #3A3A3A;
     
 }
@@ -52,6 +56,7 @@ nav{
     display: flex;
    
     justify-content: space-between;
+   
   
     
 
@@ -313,4 +318,93 @@ margin-left: 33px;
 }
 
 
-/* 
+/* small device */
+
+@media screen and (max-width: 668px){
+    header{
+        margin: 0 20px;
+
+    }
+    /* nav */
+
+    nav{
+        align-items: baseline;
+    }
+     .nav-title-div{
+        margin-left: 30px;
+     }
+    nav .fa-bars{
+        display: block;
+    }
+  
+    .menu{
+        display: none;
+    }
+    .hide-menu{
+        display: block;
+    }
+
+    /* banner */
+
+    .banner{
+        flex-direction: column-reverse;
+       
+    }
+    .banner-blog, .banner-img{
+        width: 100%;
+    }
+    .banner-blog{
+        margin-top: 100px;
+        
+    }
+    .banner-img img{
+        width: 100%;
+    }
+  .banner-title{
+    width: 100%;
+    font-size: 30px;
+    text-align: center;
+  }
+  .banner-p{
+    width: 100%;
+    margin-top: 0;
+    
+    text-align: center;
+  }
+  .banner-btn{
+    margin-left: 70px;
+  }
+  /* Logo*/
+.logo{
+    margin-left: 0;
+    margin-right: 0;
+    margin-bottom: 0;
+    margin-top: 30px;
+    padding: 0;
+}
+  .logo-div{
+    width: 100%;
+    width: 275px;
+    height: 61px;
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    grid-template-rows: repeat(2,1fr);
+    margin-left: 30px;
+    margin-top: 50px;
+  }
+ .logo-div img{
+    width: 50px;
+    height: 16px;
+   
+ }
+
+
+
+
+
+}
+
+main,footer{
+    display: none;
+}
+
