--- a/style.css
+++ b/style.css
@@ -322,8 +322,12 @@ margin-left: 33px;
 
 @media screen and (max-width: 668px){
     header{
-        margin: 0 20px;
+        margin: 0 5%;
+       
 
+    }
+    main{
+        margin: 0 5%;
     }
     /* nav */
 
@@ -399,12 +403,62 @@ margin-left: 33px;
  }
 
 
+/* card */
 
+.card{
+    grid-template-columns: repeat(1,1fr);
+    margin-left: 0;
+    grid-row-gap: 20px;
+}
+.card-see-more{
+    margin-right: 5%;
+}
+
+
+/* Last section*/
+.last-section{
+    margin-left: 0;
+}
+.last{
+    flex-direction: column-reverse;
+    
+}
+.last-blog{
+    width: 30%;
+}
+.last-img{
+    width: 30%;
+    margin-top: 50px;
+}
+.last-img img{
+   width: 100%;
+}
+.last-blog-title{
+    
+    font-size: 24px;
+    text-align: center;
+}
+.last-blog-p{
+    text-align: center;
+}
+.last-blog-btn{
+    margin: 0 30%;
+}
+
+
+/* footer*/
+
+
+footer{
+    margin-top: 500px;
+    width: 100%;
+}
+.footer-container{
+    margin:0 15%
+    
+}
 
 
 }
 
-main,footer{
-    display: none;
-}
 
